--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
 			<td colspan="3" style="height: 10%;">
 				<p>Above: Spinner dolphins in the Indian Ocean outside North Male Atoll in the Maldives.</p>
 				<p>Right: Whale shark in Huvadhoo Atoll in the Maldives.</p>
-				<p>Web page updated by: Titus Kadooli 0047/031</p>
+				<p>Web page updated by: Titus Kadooli</p>
 			</td>
 		</tr>
 		<tr>
